# drone-system

./: .envrc  .gitignore  Makefile  TODO.md  docker-compose.yml
components/: .gitignore
components/mavlink-component/: .envrc  Makefile  pyproject.toml  recipe.yaml
components/mavlink-component/mavlink_component/: mavlink-component.py
components/mavlink-component/tests/: test_mavlink_component.py
components/mavlink-drone-component/: pyproject.toml
docs/: DEV_ENVIRONMENT.md  STARTUP.md  SYSTEM_REQUIREMENTS.md
drone/: pyproject.toml
drone-core/: Pipfile  README.md  ardupilot-drone.py  drone.py  pyproject.toml
drone-core/tests/: test_drone_core.py
infra/project/: .envrc  component-distribution.tf  developer.tf  greengrass-core--provisioning.tf  greengrass-core-provisioning.tf  iot-component-distribution.tf  iot-groups.tf  iot.tf  outputs.tf  providers.tf  variables.tf
