[tool.poetry]
name = "drone-core"
version = "0.1.0"
description = "Convenience wrapper for pymavlink based on dronekit."
authors = ["Your Name <you@example.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
