[tool.poetry]
name = "drone"
description = "To be described."
authors = ["kaidobit"]
version = "0.1.0"
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
dronekit = {git = "https://github.com/dronekit/dronekit-python.git"} # unfortunatly its not beeing released for years but kind of maintained
awsiotpythonsdk = {git = "https://github.com/aws/aws-iot-device-sdk-python.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
