[tool.poetry]
name = "mavlink-component"
version = "0.1.0"
description = ""
authors = ["Patrick Shaikh <patrick.shaikh@mayflower.de>"]

[tool.poetry.dependencies]
python = "^3.8"
dronekit = {git = "https://github.com/dronekit/dronekit-python.git"}
awsiotsdk = {git = "https://github.com/aws/aws-iot-device-sdk-python-v2.git", rev = "main"}
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
