[tool.poetry]
name = "mavlink-drone-component"
version = "0.1.0"
description = ""
authors = ["kaidobit"]

[tool.poetry.dependencies]
python = "^3.8"
dronekit = {git = "https://github.com/dronekit/dronekit-python.git"}
awsiotsdk = {git = "https://github.com/aws/aws-iot-device-sdk-python-v2.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
